fix: looks correct on mobile

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,7 +1,4 @@
 .skills-container {
-    padding: 2rem 1rem;
-    margin: 0 auto;
-    max-width: 1400px;
     width: 100%;
 }
 
@@ -10,17 +7,7 @@
     grid-template-columns: 1fr;
     gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
-
-}
-
-.skills-heading {
-    text-align: center;
-    font-size: 2rem;
-    color: #f3f3f3;
-    font-weight: 700;
-    border-bottom: 3px solid #4299e1;
-    display: inline-block;
-    margin-bottom: 0, auto, 2rem, auto;
+    margin: 1rem 1rem;
 }
 
 .skills-column {
@@ -28,14 +15,6 @@
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 1.5rem;
-}
-
-.skills-section-header{
-    text-align: center;
-    color: #cbcbcb;
-    font-size: 3rem;
-    border-bottom: 2px solid #cbcbcb;
-    margin: 1rem 0;
 }
 
 .column-title {
@@ -58,11 +37,20 @@
     flex-direction: column;
     align-items: center;
     border-radius: 8px;
-    transition: background-color .3s ease;
 }
 
 .skill-icon {
     margin-bottom: 0.5rem;
-    width: 2.5vw;
+    width: max(2.5vw, 3.5vh);
     aspect-ratio: 1;
+}
+
+.skill-name{
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .skills-grid {
+        grid-template-columns: 1fr;
+    }
 }
